--- a/index.html
+++ b/index.html
@@ -4,9 +4,129 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="./Swiper/cdn.jsdelivr.net_npm_swiper@8.4.7_swiper-bundle.min.css"
+    />
     <title>Practice Website #1</title>
   </head>
   <body>
+    <section class="news-section" style="position: relative">
+      <div class="container">
+        <div class="slide-container swiper" style="position: absolute">
+          <div class="slide-header">
+            <h2>News</h2>
+            <div class="swiper-arrows-container">
+              <div class="swiper-button-prev">
+                <img src="./Assets/Images/icons8-arrow-30.png" />
+              </div>
+              <div class="swiper-button-next">
+                <img src="./Assets/Images/icons8-right-arrow-30.png" />
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper swiper-wrapper">
+            <div class="card swiper-slide">
+              <div class="image-box">
+                <img
+                  src="./Assets/Images/Swipper-IMG-1.png"
+                  alt="girlpicture"
+                />
+                <h2>There are many variations of passages</h2>
+                <p>22 April 2023</p>
+                <button>
+                  See More
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="14"
+                    viewBox="0 0 16 14"
+                    fill="none"
+                  >
+                    <path
+                      d="M15.6652 7.82364C16.1116 7.36808 16.1116 6.62827 15.6652 6.17272L9.95055 0.341663C9.5041 -0.113888 8.77906 -0.113888 8.33261 0.341663C7.88615 0.797215 7.88615 1.53703 8.33261 1.99258L12.1007 5.83379H1.14292C0.510743 5.83379 0 6.35494 0 7C0 7.64506 0.510743 8.16621 1.14292 8.16621H12.0971L8.33618 12.0074C7.88973 12.463 7.88973 13.2028 8.33618 13.6583C8.78263 14.1139 9.50767 14.1139 9.95413 13.6583L15.6687 7.82728L15.6652 7.82364Z"
+                      fill="white"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <div class="image-box">
+                <img src="./Assets/Images/Swipper-IMG-2.png" alt="seabeach" />
+                <h2 style="margin-top: 314px">
+                  The point of using Lorem Ipsum
+                </h2>
+                <p>20 April 2023</p>
+                <button>
+                  See More
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="14"
+                    viewBox="0 0 16 14"
+                    fill="none"
+                  >
+                    <path
+                      d="M15.6652 7.82364C16.1116 7.36808 16.1116 6.62827 15.6652 6.17272L9.95055 0.341663C9.5041 -0.113888 8.77906 -0.113888 8.33261 0.341663C7.88615 0.797215 7.88615 1.53703 8.33261 1.99258L12.1007 5.83379H1.14292C0.510743 5.83379 0 6.35494 0 7C0 7.64506 0.510743 8.16621 1.14292 8.16621H12.0971L8.33618 12.0074C7.88973 12.463 7.88973 13.2028 8.33618 13.6583C8.78263 14.1139 9.50767 14.1139 9.95413 13.6583L15.6687 7.82728L15.6652 7.82364Z"
+                      fill="white"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <div class="image-box">
+                <img src="./Assets/Images/Swipper-IMG-3.png" alt="room" />
+                <h2>I must explain to you how all this mistaken idea</h2>
+                <p>19 April 2023</p>
+                <button>
+                  See More
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="14"
+                    viewBox="0 0 16 14"
+                    fill="none"
+                  >
+                    <path
+                      d="M15.6652 7.82364C16.1116 7.36808 16.1116 6.62827 15.6652 6.17272L9.95055 0.341663C9.5041 -0.113888 8.77906 -0.113888 8.33261 0.341663C7.88615 0.797215 7.88615 1.53703 8.33261 1.99258L12.1007 5.83379H1.14292C0.510743 5.83379 0 6.35494 0 7C0 7.64506 0.510743 8.16621 1.14292 8.16621H12.0971L8.33618 12.0074C7.88973 12.463 7.88973 13.2028 8.33618 13.6583C8.78263 14.1139 9.50767 14.1139 9.95413 13.6583L15.6687 7.82728L15.6652 7.82364Z"
+                      fill="white"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <div class="image-box">
+                <img src="./Assets/Images/Swipper-IMG-4.png" alt="clock" />
+                <h2 style="margin-top: 232px">
+                  On the other hand, we denounce with righteous indignation
+                </h2>
+                <p>15 April 2023</p>
+                <button>
+                  See More
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="14"
+                    viewBox="0 0 16 14"
+                    fill="none"
+                  >
+                    <path
+                      d="M15.6652 7.82364C16.1116 7.36808 16.1116 6.62827 15.6652 6.17272L9.95055 0.341663C9.5041 -0.113888 8.77906 -0.113888 8.33261 0.341663C7.88615 0.797215 7.88615 1.53703 8.33261 1.99258L12.1007 5.83379H1.14292C0.510743 5.83379 0 6.35494 0 7C0 7.64506 0.510743 8.16621 1.14292 8.16621H12.0971L8.33618 12.0074C7.88973 12.463 7.88973 13.2028 8.33618 13.6583C8.78263 14.1139 9.50767 14.1139 9.95413 13.6583L15.6687 7.82728L15.6652 7.82364Z"
+                      fill="white"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--swiper-->
+    <script src="./Swiper/cdn.jsdelivr.net_npm_swiper@8.4.7_swiper-bundle.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
