--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Practice Website #1</title>
   </head>
   <body>
-    <section class="news-section" style="position: relative">
+    <section class="news-section">
       <div class="container">
         <div class="slide-container swiper" style="position: absolute">
           <div class="slide-header">
